# trilogy-save-editor-cli

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: CI.yml
src/: main.rs  save_game.rs
src/cli/: head_morph.rs  mod.rs
src/save_data/: mod.rs
src/save_data/mass_effect_1_le/: mod.rs  player.rs  squad.rs
src/save_data/mass_effect_1_le/legacy/: art_placeable.rs  inventory.rs  mod.rs  pawn.rs
src/save_data/mass_effect_2/: galaxy_map.rs  mod.rs  player.rs  squad.rs
src/save_data/mass_effect_3/: galaxy_map.rs  mod.rs  player.rs  plot.rs  squad.rs
src/save_data/shared/: appearance.rs  mod.rs  player.rs  plot.rs
src/unreal/: deserializer.rs  mod.rs  serializer.rs
test/: ME2LeSave.pcsav  ME2Save.pcsav  ME2Save360.xbsav  ME3Save.pcsav  ME3Save360.xbsav
